<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sls.uniparser.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvURL"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editURL"
        android:layout_below="@id/textView"
        android:layout_alignRight="@id/textView"
        android:layout_alignEnd="@id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEmails"
        android:id="@+id/tvEmails"
        android:layout_below="@id/editURL"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:visibility="invisible" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinnerPromt"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvEmails"
        android:textSize="20sp"
        android:id="@+id/textForSpinner" />
    <Spinner
        android:layout_below="@+id/textForSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="center_horizontal" />

        <ListView
            android:layout_below="@id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listEmail"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/progressBar" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStart"
        android:id="@+id/btnStart"
        android:layout_alignTop="@+id/progressBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProgress"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_toLeftOf="@+id/tvEmails"
        android:layout_toStartOf="@+id/tvEmails"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_example_url"
        android:id="@+id/tvExample"
        android:layout_below="@+id/editURL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
